WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
19926
URL causes crash within a minute
https://bugs.webkit.org/show_bug.cgi?id=19926
Summary
URL causes crash within a minute
Jim Oase
Reported
2008-07-07 07:59:07 PDT
This URL will crash this build
http://www.scribd.com/doc/93363/Buckminster-Fuller-Global-Energy-Grid-01
Attachments
Stack trace
(12.62 KB, text/plain)
2008-07-07 10:46 PDT
,
Cameron Zwarich (cpst)
no flags
Details
Proposed patch
(1.27 KB, patch)
2008-07-07 18:00 PDT
,
Cameron Zwarich (cpst)
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2008-07-07 08:28:26 PDT
Will crash which build?
Mark Rowe (bdash)
Comment 2
2008-07-07 08:31:32 PDT
Can you please provide a crash log? See <
http://webkit.org/quality/crashlogs.html
> for how to retrieve one.
Cameron Zwarich (cpst)
Comment 3
2008-07-07 10:39:05 PDT
Confirmed with
r35029
.
Cameron Zwarich (cpst)
Comment 4
2008-07-07 10:46:15 PDT
Created
attachment 22135
[details]
Stack trace This seems to be the same as
bug 19907
, although it isn't dying in the same place. Maybe that is simply a debug vs. release issue.
Mark Rowe (bdash)
Comment 5
2008-07-07 11:13:44 PDT
***
Bug 19929
has been marked as a duplicate of this bug. ***
Cameron Zwarich (cpst)
Comment 6
2008-07-07 17:04:39 PDT
***
Bug 19927
has been marked as a duplicate of this bug. ***
Cameron Zwarich (cpst)
Comment 7
2008-07-07 18:00:20 PDT
Created
attachment 22147
[details]
Proposed patch
Cameron Zwarich (cpst)
Comment 8
2008-07-07 18:25:52 PDT
Landed in
r35053
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug