2008-07-07  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

Reviewed by Geoff.

        Bug 19926: URL causes crash within a minute
        <https://bugs.webkit.org/show_bug.cgi?id=19926>

        Add a check that lastGlobalObject is non-null in Machine::execute()
        before copying its globals to the current register file.

        In theory, it is possible to make a test case for this, but it will
        take a while to get it right.

        * VM/Machine.cpp:
        (KJS::Machine::execute):


Canonical link: https://commits.webkit.org/27494@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35053 268f45cc-cd09-0410-ab3c-d52691b4dbfc